# PawGleBackend

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  space_client.py  startup.sh
.claude/: settings.local.json
.claude/.claude-backup/: settings.local.json
.github/workflows/: local_pawgle.yml  master_pawgle.yml
accounts/: alerts.py  apps.py  automatch.py  chat_views.py  cookie_auth.py  email_backend.py  magic_link.py  models.py  pawgle_client.py  qdrant_index.py  serializers.py  signals.py  storage.py  tag_views.py  tasks.py  urls.py  views.py
accounts/management/commands/: seed_test_data.py  sync_qdrant.py
accounts/migrations/: 0001_initial.py  0002_pet_feature_status_petlocation_feature_status_and_more.py  0003_notification_is_read.py  0004_alter_conversation_options_and_more.py  0005_alertsubscription.py  0006_pet_is_test_petlocation_is_test.py  0010_alter_pet_id.py  0011_alter_pet_animal_id.py  0012_lostpet.py  0013_petlocation_delete_lostpet_and_more.py  0014_petlocation_image.py  0015_notification.py  0016_conversation.py
animal/: settings.py  urls.py
docs/superpowers/specs/: 2026-04-03-background-feature-extraction-design.md
models/: app.py
scripts/: migrate_data_to_tidb.py  migrate_images_to_r2.py  seed_pets.py
