[project]
name = "animal-backend"
version = "0.1.0"
description = "PawGle - Django backend for animal identification"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.5",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "django-cors-headers>=4.6.0",
    "dj-database-url>=3.0.1",
    "python-dotenv>=1.1.1",
    "PyMySQL>=1.1.1",
    "cryptography>=42.0.0",
    "django-storages>=1.14.4",
    "boto3>=1.34.0",
    "pillow>=11.1.0",
    "gradio-client>=1.11.0",
    "requests>=2.32.3",
    "gunicorn>=25.3.0",
    "django-q2>=1.7.5",
    "setuptools>=70.0",
    "google-auth>=2.54.0",
]
